# feast-kafka-example

./: .gitignore  README.md  exploration.ipynb  pyproject.toml  requirements.txt
src/feast_example/: main.py  stream_job.py
src/feast_example/feature_repo/: feature_store.yaml  sensor_data.py
src/feast_test/: __init__.py  main.py  stream_job.py
src/feast_test/feature_repo/: sensor_data.py
src/feast_test/feature_repo/data/: sensor_stats.parquet
